--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,21 @@ body {
     text-align: center;
     width: 100vw;
     height: 15vh;
-
 }
 
 .arrows img {
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
+}
+
+.voteCount {
+    height: 20px;
+    margin:  0px;
+    text-align: center;
 }
 
 .entryRow {
+    height:60px;
     margin: 5px;
     background: tan;
 
